--- a/src/component/reports/pdf.html
+++ b/src/component/reports/pdf.html
@@ -9,9 +9,10 @@
   <body>
     <style>
       table {
-        width: 100%;
+        width: 800px;
         border-collapse: collapse;
         font-family: Arial, sans-serif;
+        overflow-wrap: normal;
       }
       th,
       td {
@@ -30,7 +31,7 @@
         background-color: #e2e2e2;
       }
     </style>
-    <h1 style="color: orange">Student List</h1>
+    <h1 style="color: orange ;font-size: 30;">Student List</h1>
     <table
       style="
         width: 100%;
