--- a/src/component/reports/pdf.html
+++ b/src/component/reports/pdf.html
@@ -5,137 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
-  <body>
     <style>
       table {
-        width: 800px;
+        margin: 0 auto;
         border-collapse: collapse;
         font-family: Arial, sans-serif;
-        overflow-wrap: normal;
       }
-      th,
-      td {
+      
+      th, td {
+        text-align: center;
         padding: 10px;
-        text-align: left;
         border-bottom: 1px solid #ddd;
       }
+      
       th {
         background-color: #f2f2f2;
-        font-weight: bold;
       }
-      tr:nth-child(even) {
+      
+      td:nth-child(even) {
         background-color: #f9f9f9;
       }
-      tr:hover {
-        background-color: #e2e2e2;
+      
+      h1 {
+        text-align: center;
+        color: #333;
+        font-size: 25px;
       }
     </style>
-    <h1 style="color: orange ;font-size: 30;">Student List</h1>
-    <table
-      style="
-        width: 100%;
-        border-collapse: collapse;
-        font-family: Arial, sans-serif;
-      "
-    >
+  </head>
+  <body>
+    
+    <h1>Student List</h1>
+    <table>
       <thead>
         <tr>
-          <th
-            style="
-              padding: 10px;
-              text-align: left;
-              border-bottom: 1px solid #ddd;
-            "
-          >
-            Name
-          </th>
-          <th
-            style="
-              padding: 10px;
-              text-align: left;
-              border-bottom: 1px solid #ddd;
-            "
-          >
-            Code
-          </th>
-          <th
-            style="
-              padding: 10px;
-              text-align: left;
-              border-bottom: 1px solid #ddd;
-            "
-          >
-            Specialization
-          </th>
-          <th
-            style="
-              padding: 10px;
-              text-align: left;
-              border-bottom: 1px solid #ddd;
-            "
-          >
-            Email
-          </th>
-          <th
-            style="
-              padding: 10px;
-              text-align: left;
-              border-bottom: 1px solid #ddd;
-            "
-          >
-            Phone
-          </th>
+          <th>#</th>
+          <th>Name</th>
+          <th>Code</th>
+          <th>Specialization</th>
+          <th>Email</th>
+          <th>Phone</th>
         </tr>
       </thead>
       <tbody>
         {{#each students}}
         <tr>
-          <td
-            style="
-              padding: 10px;
-              text-align: left;
-              border-bottom: 1px solid #ddd;
-            "
-          >
-            {{this.fullName}}
-          </td>
-          <td
-            style="
-              padding: 10px;
-              text-align: left;
-              border-bottom: 1px solid #ddd;
-            "
-          >
-            {{this.code}}
-          </td>
-          <td
-            style="
-              padding: 10px;
-              text-align: left;
-              border-bottom: 1px solid #ddd;
-            "
-          >
-            {{this.Specialization}}
-          </td>
-          <td
-            style="
-              padding: 10px;
-              text-align: left;
-              border-bottom: 1px solid #ddd;
-            "
-          >
-            {{this.email}}
-          </td>
-          <td
-            style="
-              padding: 10px;
-              text-align: left;
-              border-bottom: 1px solid #ddd;
-            "
-          >
-            {{this.phone}}
-          </td>
+          <td>{{this.counter}}</td>
+          <td>{{this.fullName}}</td>
+          <td>{{this.code}}</td>
+          <td>{{this.Specialization}}</td>
+          <td>{{this.email}}</td>
+          <td>{{this.phone}}</td>
         </tr>
         {{/each}}
       </tbody>
