--- a/src/component/reports/pdf.html
+++ b/src/component/reports/pdf.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
       table {
-        margin: 0 auto;
+        size: 800px;
         border-collapse: collapse;
         font-family: Arial, sans-serif;
       }
