--- a/src/component/reports/pdf.html
+++ b/src/component/reports/pdf.html
@@ -25,7 +25,7 @@
 
     th, td {
       padding: 12px 15px;
-      text-align: left;
+      text-align: center;
       border-bottom: 1px solid #ddd;
     }
 
@@ -53,6 +53,7 @@
         <th>Code</th>
         <th>Specialization</th>
         <th>Phone</th>
+        <th>Email</th>
       </tr>
     </thead>
     <tbody>
@@ -63,6 +64,7 @@
         <td>{{this.code}}</td>
         <td>{{this.Specialization}}</td>
         <td>{{this.phone}}</td>
+        <td>{{this.email}}</td>
       </tr>
       {{/each}}
     </tbody>
