--- a/src/component/reports/pdf.html
+++ b/src/component/reports/pdf.html
@@ -18,7 +18,7 @@
 
     table {
       margin: 0 auto;
-      width: 80%;
+      width: 600px;
       border-collapse: collapse;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     }
@@ -27,6 +27,7 @@
       padding: 12px 15px;
       text-align: center;
       border-bottom: 1px solid #ddd;
+      font-size: 16px;
     }
 
     th {
