--- a/src/component/reports/pdf.html
+++ b/src/component/reports/pdf.html
@@ -14,13 +14,14 @@
       text-align: center;
       color: #333;
       font-size: 25px;
+      margin-top: 20px;
     }
-
     table {
       margin: 0 auto;
-      width: 400px;
+      width: 100%; 
       border-collapse: collapse;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      padding: 2px;
+      margin-right:2px ;
     }
 
     th, td {
@@ -32,13 +33,9 @@
 
     th {
       background-color: #f2f2f2;
+      font-size: 16px;
       font-weight: bold;
     }
-
-    tbody tr:hover {
-      background-color: #f9f9f9;
-    }
-
     td:nth-child(even) {
       background-color: #f9f9f9;
     }
