--- a/src/component/reports/pdf.html
+++ b/src/component/reports/pdf.html
@@ -18,22 +18,25 @@
     }
     table {
       margin: 0 auto;
-      width: 100%; 
+      width: 80%; 
       border-collapse: collapse;
       padding: 2px;
-      margin-right:2px ;
+      word-wrap: break-word;
+      margin-left: 5%;
+      margin-left: 5%;
     }
 
     th, td {
       padding: 12px 15px;
       text-align: center;
       border-bottom: 1px solid #ddd;
-      font-size: 16px;
+      font-size: 14px;
+      word-wrap: break-word;
     }
 
     th {
       background-color: #f2f2f2;
-      font-size: 16px;
+      font-size: 14px;
       font-weight: bold;
     }
     td:nth-child(even) {
