--- a/src/component/reports/pdf.html
+++ b/src/component/reports/pdf.html
@@ -18,7 +18,7 @@
     }
     table {
       margin: 0 auto;
-      width: 50%; 
+      width: 200px;
       border-collapse: collapse;
       padding: 2px;
       word-wrap: break-word;
